added vagrant provision for laravel